Added basic login with Auth0

--- a/Ang-GACD-UI/src/app/app.component.html
+++ b/Ang-GACD-UI/src/app/app.component.html
@@ -1,4 +1,16 @@
+<app-nav-bar></app-nav-bar>
 <h1>{{title}}</h1>
+
+<!-- Testing Buttons -->
+<!-- <app-login-button></app-login-button>
+<app-signup-button></app-signup-button>
+<app-logout-button></app-logout-button>
+<app-authentication-button></app-authentication-button> -->
+
+
+
+
+
 <h2>User Detail</h2>  
 
 <h1>Member Detail</h1>  
