--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
@@ -6,6 +6,9 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
+          <a href="profile">Profile</a>
+        </li>
+        <li class="nav-item">
           <app-authentication-button></app-authentication-button>
         </li>
       </ul> 
