:sparkles: Added api testing page

--- a/Ang-GACD-UI/src/app/app.component.html
+++ b/Ang-GACD-UI/src/app/app.component.html
@@ -27,6 +27,7 @@
         
         <button (click)="GenerateTest()" class="btn btn-sucess">Start Test</button>
       <div class="mt-5">
+        <!-- Content from pages is displayed here -->
         <router-outlet></router-outlet>
       </div>
     </div>
