--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
@@ -9,6 +9,9 @@
           <a href="profile">Profile</a>
         </li>
         <li class="nav-item">
+          <a href="apitest">Test Page</a>
+        </li>
+        <li class="nav-item">
           <app-authentication-button></app-authentication-button>
         </li>
       </ul> 
