--- a/Ang-GACD-UI/src/app/pages/profile/profile.component.html
+++ b/Ang-GACD-UI/src/app/pages/profile/profile.component.html
@@ -9,8 +9,11 @@
         />
       </div>
       <div class="col-md text-center text-md-left">
-        <h2>{{ user.name }}</h2>
-        <p class="lead text-muted">{{ user.email }}</p>
+        <ul>
+          <li>Username: <span>{{ user.name }}</span></li>
+          <li>Email: <span>{{ user.email }}</span>
+        </ul>
+        
       </div>
     </div>
   
