Added another api test call

--- a/Ang-GACD-UI/src/app/pages/apitest/apitest.component.html
+++ b/Ang-GACD-UI/src/app/pages/apitest/apitest.component.html
@@ -14,6 +14,9 @@
       <button (click)="callApi()" type="button" class="btn btn-primary">
         Get secret Message
       </button>
+      <button (click)="callApiGetUserInfo()" type="button" class="btn btn-primary">
+        Get User information from backend
+      </button>
       
       <button (click)="callApiPublic()" type="button" class="btn btn-primary">
         Get Public Message
