--- a/Ang-GACD-UI/src/app/app.component.html
+++ b/Ang-GACD-UI/src/app/app.component.html
@@ -1,40 +1,71 @@
-<div id="app" class="d-flex flex-column h-100">
-  <div class="container" *ngIf="auth.isLoading$ | async; else loaded">
-    <app-loading></app-loading>
+
+<aside class="pop-menu_container" [ngClass]="{'pop-menu_container-active': showMenu}" (click)="displayMenu()">
+  <nav class="pop-menu" [ngClass]="{'pop-menu-active': showMenu}" (click)="$event.stopImmediatePropagation();">
+    <div *ngIf="auth.user$ | async as user"> 
+      <section class="menu-header">
+          <span class="greeting_text">Welcome Back</span>
+          <div class="profile-image_container">
+              <img [src]="user.picture" alt="profile-image"
+                  class="profile_image">
+          </div>
+          <div class="account-details">
+              <span class = "profile_link">Account</span>
+              <span class="name_text">{{user.name}}</span>
+              <span class="email_text">{{user.email}}</span>
+          </div>
+      </section>
+      <section class="menu-body">
+        <ul class="menu_list">
+          <li>Statistics</li>
+          <li>Leaderboards</li>
+          <li>Competitions(Not Yet Implemented)</li>
+          <li>Take a Test</li>
+          
+        </ul>
+      </section>
+      <section class="menu-footer">
+  
+      </section>
+    </div>
+  </nav>
+</aside>
+  
+  <div class="root_container" >
+      <header class="main_header">
+  
+          <div class="top_bar">
+            <svg (click)="displayMenu()" class="menu_icon">
+                <rect width="45" height="6" y="20"></rect>
+                <rect width="45" height="6" y="30"></rect> 
+                <rect width="45" height="6" y="40"></rect>  
+            </svg>
+  
+          <a class="logo_icon">
+              <img src="https://api.freelogodesign.org/files/610f46969ca84d6aa71e0ef605b9caeb/thumb/logo_200x200.png?v=637589090550000000" alt="logo"/>
+          </a>
+
+          <ul class="login_container">
+            <li>
+              <a href="profile">Profile</a>
+            </li>
+            <li>
+              <a href="apitest">Test Page</a>
+            </li>
+            <li>
+              <app-authentication-button></app-authentication-button>
+            </li>
+          </ul> 
+          </div>
+      </header>
+  
+      <main class="main_container">
+          <div class="main-container_bg"></div>
+          <router-outlet></router-outlet>
+      </main>
+  
+      <footer class="main_footer">
+          <small class="copyright__text">Copyright © 2021 Kwik Koder</small>
+      </footer>
   </div>
 
-  <ng-template #loaded>
-    <app-nav-bar></app-nav-bar>
 
-    <div class="container flex-grow-1">
-      <div class="mt-5">
-        <h1>{{title}}</h1>
-        <h2>User Detail</h2>  
-
-        <h1>Member Detail</h1>  
-        <ul>  
-          <li *ngFor = "let i of User">  
-            {{i.name}} ----- {{i.username}} ------ {{i.id}} ---- {{i.email}} 
-          </li>  
-        </ul>  
-      </div>
-      <div class ="form-group">
-        <p id="quoteSpace" ></p>
-        <form id="testUserEntry">
-          <textarea id="userInput"></textarea>
-        </form>
-        </div>
-        
-        <button (click)="GenerateTest()" class="btn btn-sucess">Start Test</button>
-      <div class="mt-5">
-        <!-- Content from pages is displayed here -->
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-
-   
-  </ng-template>
-</div>
-
-
-<!-- <app-profile *ngIf="auth.isAuthenticated$ | async"></app-profile> -->
