--- a/Ang-GACD-UI/src/app/pages/home/home.component.html
+++ b/Ang-GACD-UI/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<h1>Home page!</h1> 
+
+
+<div class=home_page>
+    <h1>Welcome to Kwik Koder</h1>
+    <h2>Test your typing skills and track your progress</h2>
+    <button class="main_test_button">Test Now</button>
+</div>
+    
