--- a/Ang-GACD-UI/src/styles.css
+++ b/Ang-GACD-UI/src/styles.css
@@ -7,7 +7,7 @@
     --dark3: #665c54;
     --dark4: #7c6f64;
     --dark5: #7c6f64;
-  
+
     --neutral_red: #cc241d;
     --neutral_green: #98971a;
     --neutral_yellow: #d79921;
@@ -15,7 +15,7 @@
     --neutral_purple: #b16286;
     --neutral_aqua : #689d6a;
     --neutral_orange: #d65d0e;
-  
+
     --bright_red     : #fb4934;
     --bright_green   : #b8bb26;
     --bright_yellow  : #fabd2f;
@@ -23,28 +23,242 @@
     --bright_purple  : #d3869b;
     --bright_aqua    : #8ec07c;
     --bright_orange  : #fe8019;
-  
-    --light1: #ebdbb2;
-  }
 
-h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+    --light1: #ebdbb2;
 }
-h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
+
+.root_container {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 0.5fr auto;
+    position: relative;
 }
-body {
-    margin: 2em;
+
+
+/*Pop out Menu*/
+.pop-menu_container {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 25;
 }
-body, input[type="text"], button {
-    color: #333;
-    font-family: Cambria, Georgia, serif;
+
+.pop-menu_container-active {
+    pointer-events: auto;
 }
-  /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
+
+.pop-menu_container::before {
+    content: '';
+    cursor: pointer;
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #0c1066;
+    opacity: 0;
+    transition: opacity 300ms linear;
+    will-change: opacity;
+}
+
+.pop-menu_container-active::before {
+    opacity: 0.3;
+}
+
+.pop-menu {
+    box-sizing: border-box;
+    transform: translateX(-103%);
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    height: 100%;
+    width: 90%;
+    max-width: 26rem;
+    background-color: white;
+    box-shadow: 0 0 2rem rgba(0, 0, 255, 0.1);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 4fr 1fr;
+    grid-gap: 1rem;
+    transition: transform 300ms linear;
+    will-change: transform;
+}
+
+.pop-menu-active {
+    transform: none;
+}
+
+.menu-header {
+    background: linear-gradient(to right, #00f7ff, #a318ff);
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 4fr;
+    grid-template-areas: "greeting greeting" "image details";
+    box-sizing: border-box;
+    width: 100%;
+    align-content: center;
+    color: white;
+    box-shadow: 0 0.5rem 2rem rgba(0, 0, 255, 0.2);
+}
+
+.greeting_text {
+    grid-area: greeting;
+    font-size: 1.25rem;
+    letter-spacing: 0.15rem;
+    text-transform: uppercase;
+    margin-top: 1rem;
+    justify-self: center;
+    align-self: center;
+}
+
+.account-details {
+    grid-area: details;
+    display: flex;
+    flex-flow: column;
+    margin-left: 1rem;
+    align-self: center;
+}
+
+.name_text {
+    font-size: 1.15rem;
+    margin-bottom: 0.5rem;
+}
+.email_text {
+    font-size: 0.9rem;
+    letter-spacing: 0.1rem;
+}
+
+.menu-body {
+    display: grid;
+    width: 100%;
+}
+
+.profile-image_container {
+    grid-area: image;
+    margin-right: 0.5rem;
+    border-radius: 50%;
+    height: 4rem;
+    width: 4rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    align-self: center;
+    margin-left: 2rem;
+}
+
+.profile_image {
+    max-width: 4rem;
+}
+
+.main_header {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 0.25fr;
+    grid-template-rows: 1fr;
+    height: 4rem;
+    margin: 0;
+    align-items: center;
+    transition: background-color 500ms linear;
+    animation: 1s ease-in-out 0ms 1 fadein;
+    background: transparent;
+}
+
+.login_container {
+    width: 400px;
+    cursor: pointer;
+    position:absolute;
+    top: 10px;
+    right: 0px;
+    margin: 0 .03rem;
+}
+.login_container li{
+    float: left;
+    display:block;
+    margin: 2px;
+    border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 0 0 .2rem #fff,
+            0 0 .2rem #fff,
+            0 0 2rem #bc13fe,
+            0 0 0.8rem #bc13fe,
+            0 0 2.8rem #bc13fe,
+            inset 0 0 1.3rem #bc13fe;
+}
+.login_container li a{
+    display: block;
+    text-align: center;
+    padding: 8px 22px;
+    color: #fff;
+}
+
+.top_bar {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    max-width: 5rem;
+}
+/*icons*/
+.menu_icon {
+    position: relative;
+    padding-left: 1em;
+    margin-right: 1rem;
+    color:#fff;
+}
+.menu_icon:hover{
+    cursor: pointer;
+}
+
+.logo_icon {
+    position: absolute;
+    top: 25px;
+    right: 47%;
+    height: 2rem;
+}
+
+/*Body*/
+.main-container_bg {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    opacity: 0;
+    background: white;
+    transition: opacity 300ms linear;
+    opacity: 1;
+    background: linear-gradient(to bottom, #f360a2, #2E1D65);
+    transition: opacity 300ms linear;
+}
+
+/*Bottom of Page*/
+.main_footer {
+    background: transparent;
+    position: absolute;
+    bottom: 1rem;
+    left: 1.5rem;
+    z-index: 100;
+}
+
+.copyright_text {
+    letter-spacing: 0.1rem;
+    color: white;
+}
+
+@media only screen and (max-width: 300px) {
+    .slide-menu {
+    width: 100%;
+    }
 }
