Done with shared session

--- a/Ang-GACD-UI/src/app/app.component.html
+++ b/Ang-GACD-UI/src/app/app.component.html
@@ -19,7 +19,9 @@
           <li>Statistics</li>
           <li>Leaderboards</li>
           <li>Competitions(Not Yet Implemented)</li>
-          <li>Take a Test</li>
+          <li>
+            <a href="test">Take a Test</a>
+          </li>
           
         </ul>
       </section>
@@ -46,10 +48,10 @@
 
           <ul class="login_container">
             <li>
-              <a href="profile">Profile</a>
+              <a href="test">Take a Test</a>
             </li>
             <li>
-              <a href="apitest">Test Page</a>
+              <a href="profile">Profile</a>
             </li>
             <li>
               <app-authentication-button></app-authentication-button>
