--- a/Ang-GACD-UI/src/app/pages/apitest/apitest.component.html
+++ b/Ang-GACD-UI/src/app/pages/apitest/apitest.component.html
@@ -21,6 +21,9 @@
       <button (click)="callApiPublic()" type="button" class="btn btn-primary">
         Get Public Message
       </button>
+      <button (click)="testEndpoint()" type="button" class="btn btn-primary">
+        Test
+      </button>
     </div>
   
     <div *ngIf="message" class="mt-5">
