--- a/Ang-GACD-UI/src/app/pages/apitest/apitest.component.html
+++ b/Ang-GACD-UI/src/app/pages/apitest/apitest.component.html
@@ -21,8 +21,9 @@
       <button (click)="callApiPublic()" type="button" class="btn btn-primary">
         Get Public Message
       </button>
-      <button (click)="testEndpoint()" type="button" class="btn btn-primary">
-        Test
+      <input type="number" name="langid" [(ngModel)]="languageId">
+      <button (click)="testEndpoint(languageId)" type="button" class="btn btn-primary">
+        Test Getting code snippet
       </button>
     </div>
   
@@ -36,4 +37,18 @@
         </div>
       </div>
     </div>
+
+
+    <div *ngIf="testmat" class="mt-5">
+      <h6 class="muted">Result: </h6>
+      <h6 class="muted">language: {{testmat.catagoryId}} </h6>
+      <div class="container-fluid">
+        <div class="row">
+            <pre class="col-12 text-light bg-dark p-4">{{ testmat.content }}</pre>          
+        </div>
+      </div>
+    </div>
   </div>
+
+
+  
