--- a/Ang-GACD-UI/src/app/pages/test/test.component.html
+++ b/Ang-GACD-UI/src/app/pages/test/test.component.html
@@ -1,19 +1,19 @@
 <div class="test_info">
     <span  id="categoryGroup">
-        <div class=test_category id="categoryLabel" name ="categoryLabel">Category</h6>
-        <div class=test_category id="categoryValue" name ="categoryValue"></h6>  
+        <div class=test_category id="categoryLabel" name ="categoryLabel">Category</div>
+        <div class=test_category id="categoryValue" name ="categoryValue"></div>  
     </span>
     <span  id="charactersTypedGroup">
-        <div class=charactersTyped id="charactersTypedLabel" name ="charactersTypedLabel">Characters Typed</h6>
-        <div class=charactersTyped id="charactersTypedValue" name ="charactersTypedValue"></h6>  
+        <div class=charactersTyped id="charactersTypedLabel" name ="charactersTypedLabel">Characters Typed</div>
+        <div class=charactersTyped id="charactersTypedValue" name ="charactersTypedValue"></div>  
     </span>
     <span  id="errorGroup">
-        <div class=errors id="errorsLabel" name ="errorsLabel">Errors</h6>
-        <div class=errors id="errorsValue" name ="errorsValue"></h6>  
+        <div class=errors id="errorsLabel" name ="errorsLabel">Errors</div>
+        <div class="errors" id="errorsValue" name ="errorsValue">{{ state.errors }}</div>  
     </span>
     <span  id="timerGroup">
-        <div class=timer id="timerLabel" name ="timerLabel">Timer</h6>
-        <div class=timer id="timerValue" name ="timerValue"></h6>  
+        <div class=timer id="timerLabel" name ="timerLabel">Timer</div>
+        <div class=timer id="timerValue" name ="timerValue"></div>  
     </span>
     <!--a class=test_category id="category" name ="category">category</a>
     <a class=typed_sect id="type_count" name ="type_count">category</a>
@@ -21,14 +21,13 @@
     <a class=time_sect id="time" name ="time">category</a>-->
 </div>
 <div class="test_site">
-    <textarea id="snippet_area" name="display" placeholder="Snipets go here" rows="10"></textarea>
-    <textarea id=" " name="input" placeholder="User entry goes here" rows="10"></textarea>
-
+    <textarea id="snippet_area" value ="{{state.words}}" name="display" placeholder="Snipets go here" rows="10" readonly="true"></textarea>
+    <textarea id=" " name="input" [(ngModel)]="state.enteredText"  (ngModelChange)="ProcessText()" placeholder="User entry goes here" rows="10"></textarea>
 </div>
-<div>
+<!-- <div>
     <h1>Author: {{ testmat.author }}</h1>
     <h1 *ngIf="testmat">{{ testmat.content }}</h1>
     <h1 *ngIf="state.wordsPerMinute">{{ state.wordsPerMinute }}</h1>
     <input *ngIf="testmat" [(ngModel)]="inputfield" value={{state.enteredText}} (ngModelChange)="onWordChange()"/>
     <button *ngIf="testmat" (click)="newTest()" >New Test</button>
-</div>
+</div> -->
