--- a/Ang-GACD-UI/src/app/pages/test/test.component.html
+++ b/Ang-GACD-UI/src/app/pages/test/test.component.html
@@ -12,8 +12,8 @@
         <div class="errors" id="errorsValue" name ="errorsValue">{{ state.errors }}</div>  
     </span>
     <span  id="timerGroup">
-        <div class=timer id="timerLabel" name ="timerLabel">Timer</div>
-        <div class=timer id="timerValue" name ="timerValue"></div>  
+        <div class=timer id="timerLabel" name ="timerLabel">{{wpm}}</div>
+        <div class=timer id="timerValue" name ="timerValue">w:{{state.wordPosition}}l:{{state.letterPosition}} Correct:{{state.correctchars}}</div>  
     </span>
     <!--a class=test_category id="category" name ="category">category</a>
     <a class=typed_sect id="type_count" name ="type_count">category</a>
@@ -21,13 +21,15 @@
     <a class=time_sect id="time" name ="time">category</a>-->
 </div>
 <div class="test_site">
-    <textarea id="snippet_area" value ="{{state.words}}" name="display" placeholder="Snipets go here" rows="10" readonly="true"></textarea>
-    <textarea id=" " name="input" [(ngModel)]="state.enteredText"  (ngModelChange)="ProcessText()" placeholder="User entry goes here" rows="10"></textarea>
+    <textarea id="snippet_area" value="{{state.words}}" name="display" placeholder="Snipets go here" rows="10" readonly="true"></textarea>
+    <textarea id=" " name="input" [(ngModel)]="state.enteredText"   (keydown)="keyIntercept($event)" (ngModelChange)="onWordChange($event)" placeholder="User entry goes here" rows="10"></textarea>
 </div>
+<button *ngIf="testmat" (click)="newTest()" >New Test</button>
 <!-- <div>
     <h1>Author: {{ testmat.author }}</h1>
     <h1 *ngIf="testmat">{{ testmat.content }}</h1>
     <h1 *ngIf="state.wordsPerMinute">{{ state.wordsPerMinute }}</h1>
     <input *ngIf="testmat" [(ngModel)]="inputfield" value={{state.enteredText}} (ngModelChange)="onWordChange()"/>
     <button *ngIf="testmat" (click)="newTest()" >New Test</button>
+    (keydown)="keyIntercept($event)"
 </div> -->
