basic set up for competitions page

--- a/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
+++ b/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class = "container">
     <h3>Search For User: <input [(ngModel)]="text" (input)="SearchLetters($event)" placeholder="Enter Username Here"></h3>
     <table class = "table">
         <thead>
