--- a/Ang-GACD-UI/src/app/app.component.html
+++ b/Ang-GACD-UI/src/app/app.component.html
@@ -54,6 +54,12 @@
               <a href="profile">Profile</a>
             </li>
             <li>
+              <a href="competitions">Competitions</a>
+            </li>
+            <li>
+              <a href="leaderboard">Leaderboards</a>
+            </li>
+            <li>
               <app-authentication-button></app-authentication-button>
             </li>
           </ul> 
