--- a/Ang-GACD-UI/src/app/pages/test/test.component.html
+++ b/Ang-GACD-UI/src/app/pages/test/test.component.html
@@ -1,20 +1,19 @@
 <div class="test_info">
     <span  id="categoryGroup">
         <div class=test_category id="categoryLabel" name ="categoryLabel">Category</div>
-        <div class=test_category id="categoryValue" name ="categoryValue">{{ testmat.catagoryId }}</div>  
+        <div class=test_category id="categoryValue" name ="categoryValue"></div>  
     </span>
     <span  id="charactersTypedGroup">
         <div class=charactersTyped id="charactersTypedLabel" name ="charactersTypedLabel">Characters Typed</div>
         <div class=charactersTyped id="charactersTypedValue" name ="charactersTypedValue"></div>  
     </span>
-    <span  id="errorGroup">
+
         <div class=errors id="errorsLabel" name ="errorsLabel">Errors</div>
         <div class="errors" id="errorsValue" name ="errorsValue">{{ state.errors }}</div>  
-    </span>
-    <span  id="timerGroup">
-        <div class=timer id="timerLabel" name ="timerLabel">{{wpm}}</div>
-        <div class=timer id="timerValue" name ="timerValue">w:{{state.wordPosition}}l:{{state.letterPosition}} Correct:{{state.correctchars}}</div>  
-    </span>
+
+
+        <div class=timer id="timerLabel" name ="timerLabel">Wpm: {{wpm}}</div>
+
     <!--a class=test_category id="category" name ="category">category</a>
     <a class=typed_sect id="type_count" name ="type_count">category</a>
     <a class=error_sect id="error" name ="error">category</a>
@@ -23,8 +22,9 @@
 <div class="mt-2">
     <div class="container-fluid">
       <div class="row">
-          <pre tabindex="0" class="col-12 text-light bg-dark p-4" ><span *ngFor="let t of state.words.split(' ')">{{t}} </span></pre>
-          <textarea id=" " name="input" [(ngModel)]="state.enteredText"   (keydown)="keyIntercept($event)" (ngModelChange)="onWordChange($event)" placeholder="User entry goes here" rows="10"></textarea>         
+          <div class="col-12">
+            <pre tabindex="0" (click)= "focusinput" (keydown)="keyIntercept($event)" class="col-12 text-light bg-dark p-4" ><span *ngFor="let t of state.wordarray; index as i"[attr.id]="'char-'+i">{{t}}</span></pre>
+          </div>
       </div>
     </div>
 </div>
