--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
@@ -1,3 +1,29 @@
-.logo img{
+/* .logo img{
     height: fit-content;
+} */
+
+
+.toggle-btn{
+    background-color: var(--neutral_purple);
+    box-shadow: 0 0 0 0.25rem;
+    color: rgba(0,0,0,.55);
+    border-color: rgba(0,0,0,.1);
+}
+
+.nav-item a {
+    padding: .5em;
+    border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+}
+
+.color-btn{
+    padding: .5em;
+    border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
 }
