--- a/Ang-GACD-UI/src/app/components/nav-buttons/login-button/login-button.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-buttons/login-button/login-button.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-primary btn-block" (click)="loginWithRedirect()">
+<button class="btn btn-primary btn-block nav-btn" (click)="loginWithRedirect()">
     Log in
   </button>
