--- a/Ang-GACD-UI/src/app/components/nav-buttons/logout-button/logout-button.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-buttons/logout-button/logout-button.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-danger btn-block" (click)="logout()">
+<button class="btn btn-danger btn-block nav-btn" (click)="logout()">
     Log out
   </button>
