--- a/Ang-GACD-UI/src/styles.css
+++ b/Ang-GACD-UI/src/styles.css
@@ -159,18 +159,20 @@
 .profile_image {
     max-width: 4rem;
 }
-
+.nav-item{
+    text-align: right;
+}
 .main_header {
-    width: 100%;
-    display: grid;
+    /* width: 100%; */
+    /* display: grid;
     grid-template-columns: 1fr 1fr 0.25fr;
-    grid-template-rows: 1fr;
-    height: 4rem;
-    margin: 0;
-    align-items: center;
-    transition: background-color 500ms linear;
-    animation: 1s ease-in-out 0ms 1 fadein;
-    background: transparent;
+    grid-template-rows: 1fr; */
+    /* height: 4rem; */
+    /* margin: 0; */
+    /* align-items: center; */
+    /* transition: background-color 500ms linear; */
+    /* animation: 1s ease-in-out 0ms 1 fadein; */
+    /* background: transparent; */
 }
 
 .login_container {
@@ -264,4 +266,12 @@
     .slide-menu {
     width: 100%;
     }
+}
+.nav-btn{
+    margin: .2em;
+    border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
 }
