Fix mistakes and move main content down

--- a/Ang-GACD-UI/src/app/app.component.html
+++ b/Ang-GACD-UI/src/app/app.component.html
@@ -1,9 +1,13 @@
 
 <div class="root_container" >
     <main class="main_container">
+
       <app-nav-bar></app-nav-bar>
         <div class="main-container_bg"></div>
-        <router-outlet></router-outlet>
+        <div class="main_content">
+          <router-outlet></router-outlet>
+        </div>
+       
     </main>
 
     <footer class="main_footer">
