--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
@@ -18,6 +18,9 @@
     border-radius: 20px;
     box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
 }
+.nav-item{
+    text-align: right;
+}
 
 .color-btn{
     padding: .5em;
