--- a/Ang-GACD-UI/src/styles.css
+++ b/Ang-GACD-UI/src/styles.css
@@ -159,9 +159,7 @@
 .profile_image {
     max-width: 4rem;
 }
-.nav-item{
-    text-align: right;
-}
+
 .main_header {
     /* width: 100%; */
     /* display: grid;
@@ -274,4 +272,8 @@
     background-color: black;
     border-radius: 20px;
     box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+}
+
+.main_content {
+    margin-top: 10em;
 }
