--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
@@ -35,15 +35,15 @@
   border-radius: 20px;
   box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe; -->
 
-  <nav class="navbar navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#">Kwik Koder</a>
     <button class="navbar-toggler toggle-btn" style="margin-right:1em;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"  aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed" aria-controls="navbarSupportedContent">
 
       <span class="navbar-toggler-icon" ></span>
     </button>
   
-    <div class="collapse navbar-collapse justify-content-right" id="navbarSupportedContent" [ngbCollapse]="isCollapsed">
-      <ul class="navbar-nav mr-auto" style="margin:1em;">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent" [ngbCollapse]="isCollapsed">
+      <ul class="navbar-nav mr-auto" style="margin:1em;" >
         <li class="nav-item">
           <button class="btn btn-primary btn-block nav-btn"  [routerLink]="['test']">Take a Test</button>
         </li>
