just changing models

--- a/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
+++ b/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
@@ -9,10 +9,10 @@
         </thead>
         <tbody>
             <tr *ngFor="let LBModel of FilteredLBModels;">
-                <td>{{LBModel.ranking}}</td>
-                <td>{{LBModel.userName}}</td>
-                <td>{{LBModel.acc}}</td>
-                <td>{{LBModel.wpm}}</td>
+                <td>{{LBModel.Ranking}}</td>
+                <td>{{LBModel.UserName}}</td>
+                <td>{{LBModel.AverageAccuracy}}</td>
+                <td>{{LBModel.AverageWPM}}</td>
             </tr>
         </tbody>
     </table>
