Created Language selection component

--- a/Ang-GACD-UI/src/app/pages/test/test.component.html
+++ b/Ang-GACD-UI/src/app/pages/test/test.component.html
@@ -1,4 +1,5 @@
 <div class="test_info">
+    <app-lang-select (newLangSelectedEvent)="langSelected($event)"></app-lang-select>
     <span  id="categoryGroup">
         <div class=test_category id="categoryLabel" name ="categoryLabel">Category</div>
         <div class=test_category id="categoryValue" name ="categoryValue"></div>  
