Update Test page ui

--- a/Ang-GACD-UI/src/app/components/lang-select/lang-select.component.html
+++ b/Ang-GACD-UI/src/app/components/lang-select/lang-select.component.html
@@ -1,5 +1,5 @@
-<select [(ngModel)]="selection"
-(change)='itemSelected($event)'>>
+<select id="lang-dropdown" class="lang-select" [(ngModel)]="selection"
+(change)='itemSelected($event)' default="Quotes">
     <option *ngFor="let lang of enumKeys" 
             [value]="lang">
             {{langList[lang]}}
