added profile formating

--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
@@ -63,6 +63,6 @@
       </ul>
     </div>
   </nav>
-  <a class="logo_icon">
+  <a class="logo_icon" href="#">
     <img src="https://api.freelogodesign.org/files/610f46969ca84d6aa71e0ef605b9caeb/thumb/logo_200x200.png?v=637589090550000000" alt="logo"/>
 </a>
