Testing-page-ui update

--- a/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
@@ -1,6 +1,19 @@
 <div class="container-fluid">
     <div class="row">
-        <!-- <div class="col-4"><div class="info-box justify-content-center"><span class="info-text">Current Category</span><br><app-lang-select class="info-box justify-content-center" (newLangSelectedEvent)="langSelected($event)"></app-lang-select></div></div> -->
+        <div class="col-2">
+            <div class="info-box">
+                <span class="info-text">Current Category</span>
+                <br>
+                <span class="info-value">{{categoryName}}</span>
+            </div>
+        </div>
+        <div class="col-2">
+            <div class="info-box">
+                <span class="info-text">Author</span>
+                <br>
+                <span class="info-value-author">{{testmat.author}}</span>
+            </div>
+        </div>
         <!-- <div class="col-3">
             <div class="info-box">
                 <span class="info-text">Current Category</span>
@@ -8,19 +21,20 @@
                 <span class="info-value">{{categoryName}}</span>
             </div>
         </div> -->
-        <div class="col-4">
+        <div class="col-2">
             <div class="info-box">
                 <span class="info-text">Errors</span>
                 <br>
                 <span class="info-value">{{ state.errors }}</span>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-2">
             <div class="info-box">
                 <span class="info-text">Wpm</span>
                 <br>
                 <span class="info-value">{{wpm}}</span>
             </div>
+            
         </div>
     </div>
 </div>
@@ -31,7 +45,7 @@
     <div class="container-fluid">
       <div class="row">
           <div class="col-12">
-            <pre tabindex="0" (click)= "focusinput" (keydown)="keyIntercept($event)" class="col-12 text-light bg-dark p-4" ><span *ngFor="let t of state.wordarray; index as i"[attr.id]="'char-'+i">{{t}}</span></pre>
+            <pre tabindex="0" (click)= "focusinput" (keydown)="keyIntercept($event)" class="text-light bg-dark p-4" ><span *ngFor="let t of state.wordarray; index as i"[attr.id]="'char-'+i">{{t}}</span></pre>
           </div>
       </div>
     </div>
