Added Ability to display overall stats

--- a/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
+++ b/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,6 +1,7 @@
 <div class = "container">
     <h3>Search For User: <input [(ngModel)]="text" (input)="SearchLetters()" placeholder="Enter Username Here"></h3> 
     <app-lang-select class="" (newLangSelectedEvent)="langSelected($event)"></app-lang-select>
+    <button (click)="GetBestUsers(0)">Overall</button> 
     <table class = "table">
         <thead>
             <th>Ranking</th>
