Added timer to codeing tests

--- a/Ang-GACD-UI/src/app/pages/test/test.component.html
+++ b/Ang-GACD-UI/src/app/pages/test/test.component.html
@@ -7,7 +7,7 @@
                 <app-lang-select class="info-box justify-content-center" (newLangSelectedEvent)="langSelected($event)"></app-lang-select>
             </div>            
         </div>
-        <div class="col-2">
+        <div *ngIf="testmat.author" class="col-2">
             <div class="info-box">
                 <span class="info-text">Author</span>
                 <br>
@@ -33,6 +33,14 @@
                 <span class="info-text">Wpm</span>
                 <br>
                 <span class="info-value">{{wpm}}</span>
+            </div>
+            
+        </div>
+        <div *ngIf="category!=-1" class="col-2">
+            <div class="info-box">
+                <span class="info-text">Timer</span>
+                <br>
+                <span class="info-value">{{minutes}} : {{seconds}}</span>
             </div>
             
         </div>
