Worked on adding a competition

--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.html
@@ -54,6 +54,9 @@
           <button class="btn btn-primary btn-block nav-btn"  [routerLink]="['competitions']">Competitions</button>
         </li>
         <li class="nav-item">
+          <button class="btn btn-primary btn-block nav-btn"  [routerLink]="['NewCompetition']"> New Competition</button>
+        </li>
+        <li class="nav-item">
           <button class="btn btn-primary btn-block nav-btn"  [routerLink]="['leaderboard']">Leaderboards</button>
         </li>
         
