worked on adding a competition

--- a/Ang-GACD-UI/src/app/create-competition/create-competition.component.html
+++ b/Ang-GACD-UI/src/app/create-competition/create-competition.component.html
@@ -5,9 +5,8 @@
             placeholder="Enter competition name">
     </div>
     <div class="form-group">
-        <label for="category">Category</label>
-        <input type="text" class="form-control" name="category" id="category"
-            placeholder="Enter Category">
+        <label for="name">Category</label>
+        <app-lang-select class="" id="CategorySelect"></app-lang-select>
     </div>
     <div class="form-group">
         <label for="state">Snippet</label>
